[package]
name = "sui-http"
version = "0.1.0"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-http/"
license = "Apache-2.0"
edition = "2024"
readme = "README.md"
description = "HTTP server and utils used by many sui services"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg=doc_cfg -Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
    # Enable doc_cfg showing the required features.
    "--cfg=doc_cfg",

    # Generate links to definition in rustdoc source code pages
    # https://github.com/rust-lang/rust/pull/84176
    "-Zunstable-options", "--generate-link-to-definition"
]

[features]
default = []

[dependencies]
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1.4", features = ["tokio", "server-auto", "service"] }
pin-project-lite = "0.2.15"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "net"] }
tokio-util = { version = "0.7.10" }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = { version = "0.1" }

# TLS support
tokio-rustls = { version = "0.26", default-features = false }
futures-core = "0.3.31"

[dev-dependencies]
axum = { version = "0.8" }
reqwest = { version = "0.12", default-features = false, features = [ "http2", "json", "rustls-tls" ] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
